<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_dr"
            android:title="@string/inicio" />

        <item
            android:id="@+id/nav_static"
            android:icon="@drawable/ic_statistic"
            android:title="@string/estadisticas" />
    </group>

    <item android:title="@string/m_s">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_dr"
                    android:title="@string/configuraci_n" />


            </group>
            <item
                android:id="@+id/nav_salir"
                android:icon="@drawable/ic_exit"
                android:title="@string/salir" />
        </menu>
    </item>
</menu>

